Enable ZGC as the default garbage collector